// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-icq4pt-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-icq4pt-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-icq4pt-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-icq4pt-StyledOutlinedButton:hover,
.cache-icq4pt-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-icq4pt-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment large 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1h6gv7y-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1h6gv7y-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1h6gv7y-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1h6gv7y-StyledOutlinedButton:hover,
.cache-1h6gv7y-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r2:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-t9d6gd-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
}

.cache-t9d6gd-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-t9d6gd-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-t9d6gd-StyledOutlinedButton:hover,
.cache-t9d6gd-StyledOutlinedButton:active {
  background: #d9dadd;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r4:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-t9d6gd-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-icq4pt-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-icq4pt-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-icq4pt-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-icq4pt-StyledOutlinedButton:hover,
.cache-icq4pt-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r3:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-icq4pt-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment small 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-icq4pt-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-icq4pt-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-icq4pt-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-icq4pt-StyledOutlinedButton:hover,
.cache-icq4pt-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r1:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-icq4pt-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom class name 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-icq4pt-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-icq4pt-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-icq4pt-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-icq4pt-StyledOutlinedButton:hover,
.cache-icq4pt-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r8:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="custom-class cache-icq4pt-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copied text 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-icq4pt-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-icq4pt-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-icq4pt-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-icq4pt-StyledOutlinedButton:hover,
.cache-icq4pt-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r7:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-icq4pt-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copy text 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-icq4pt-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-icq4pt-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-icq4pt-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-icq4pt-StyledOutlinedButton:hover,
.cache-icq4pt-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r6:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-icq4pt-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with no border 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1677hb1-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
}

.cache-1677hb1-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1677hb1-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1677hb1-StyledGhostButton:hover,
.cache-1677hb1-StyledGhostButton:active {
  background: #e6daff;
  color: #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r5:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1677hb1-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
